--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "gulp bundle",
     "clean": "gulp clean",
-    "test": "gulp test"
+    "test": "jest"
   },
   "dependencies": {
     "react": "15.6.2",
@@ -29,9 +29,61 @@
     "@microsoft/sp-build-web": "~1.4.1",
     "@microsoft/sp-module-interfaces": "~1.4.1",
     "@microsoft/sp-webpart-workbench": "~1.4.1",
-    "gulp": "~3.9.1",
     "@types/chai": "3.4.34",
+    "@types/enzyme": "^3.1.10",
+    "@types/jest": "^22.2.3",
     "@types/mocha": "2.2.38",
-    "ajv": "~5.2.2"
+    "@types/sinon": "^4.3.1",
+    "ajv": "~5.2.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-15": "^1.0.5",
+    "gulp": "~3.9.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^22.4.3",
+    "jest-junit": "^3.7.0",
+    "raf": "^3.4.1",
+    "react-test-renderer": "^15.6.2",
+    "sinon": "^5.0.7",
+    "ts-jest": "^22.4.5"
+  },
+  "jest": {
+    "setupFiles": [
+      "raf/polyfill"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "testMatch": [
+      "**/src/**/*.test.+(ts|tsx|js)"
+    ],
+    "mapCoverage": true,
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text",
+      "cobertura"
+    ],
+    "coverageDirectory": "<rootDir>/jest",
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "testResultsProcessor": "jest-junit",
+    "coverageThreshold": {
+      "global": {
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
+      }
+    }
+  },
+  "jest-junit": {
+    "output": "./jest/summary-jest-junit.xml"
   }
 }
